--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 
 dependencies {
     compile 'commons-dbcp:commons-dbcp:1.4'
+	compile 'junit:junit:3.8.2'
     compile 'log4j:log4j:1.2.17'
     compile 'org.springframework:spring-beans:5.0.9.RELEASE'
     compile 'org.springframework:spring-jdbc:5.0.9.RELEASE'
